2007-10-11  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/unused.glade: Do not translate gtk stock label id.

2007-10-11 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/DateHandler/__init__.py: use portuguese date handler

2007-10-10 Duarte Loreto <happyguy_pt@hotmail.com>
	* src/DateHandler/_Date_pt.py: portugese datehandler accompanying translation
	* po/POTFILES.in: new file in POTFILE
	* src/DateHandler/Makefile.am: add new file for distribution

2007-10-09 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/GrampsDb/_GrampsDbBase.py: allow not to create gramps_id on add
	* src/GrampsDb/_ReadXML.py: on sourceref, don't create gramps_id
	* src/GrampsDb/_GrampsInMemDB.py: remove gid from memory map only if not None
	* src/DbLoader.py: traceback to console on xml load error

2007-10-09 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/GrampsDb/_GrampsInMemDB.py: correctly store global name grouping
	* src/GrampsDb/_GrampsBSDDB.py: correctly store global name grouping
	* src/RelLib/_Name.py: allow grouping equal to surname
	* src/Editors/_EditName.py: correct handling of name grouping, issue #647

2007-10-09 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/Editors/_EditPerson.py: change tabs in spaces (I HATE THIS !!!)

2007-10-07  Douglas Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/Calendar.py: various improvements, issue #931

2007-10-07  Douglas Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/Calendar.py: various improvements, issue #1157

2007-10-07  Gary Burton <gary.burton@zen.co.uk>
	* src/DataViews/_RelationView.py: init scroll pos on new person, issue #442

2007-10-07  Gary Burton <gary.burton@zen.co.uk>
	* src/PageView.py: sort column retains filter value, issue #507

2007-10-06  Douglas Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/Calendar.py: various improvements

2007-10-06 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/DataViews/_RelationView.py: don't crash on missing media ref